force-app/main/default/objects/Diary_Comment__x/Diary_Comment__x.object-meta.xml
<CustomObject>
    <description>Diary comments from CAP</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>DiaryComment</externalName>
    <label>Diary Comment</label>
    <pluralLabel>Diary Comments</pluralLabel>
</CustomObject>