force-app/main/default/objects/Diary_Comment__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Customer indirect lookup via external Id</description>
    <externalDeveloperName>Customer</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>IndirectLookup</type>
</CustomField>