force-app/main/default/objects/Diary_Comment__x/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Name of the branch</description>
    <externalDeveloperName>Branch</externalDeveloperName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>