force-app/main/default/objects/Diary_Comment__x/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Id of credit card</description>
    <externalDeveloperName>CreditCardId</externalDeveloperName>
    <label>Credit Card</label>
    <length>255</length>
    <referenceTo>Credit_Card__x</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>