force-app/main/default/objects/Diary_Comment__x/fields/Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Customer Review Flag</description>
    <externalDeveloperName>CustomerReview</externalDeveloperName>
    <label>Customer Review (Y/N)</label>
    <type>Checkbox</type>
</CustomField>