force-app/main/default/objects/Diary_Comment__x/fields/Cycle_Code__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Cycle Code</description>
    <externalDeveloperName>CycleCode</externalDeveloperName>
    <label>Cycle Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>