force-app/main/default/objects/Diary_Comment__x/fields/Date_Placed__c.field-meta.xml
<CustomField>
    <fullName>Date_Placed__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Date Placed</description>
    <externalDeveloperName>DatePlaced</externalDeveloperName>
    <label>Date Placed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>