force-app/main/default/objects/Diary_Comment__x/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Id of deposit account</description>
    <externalDeveloperName>DepositAccountId</externalDeveloperName>
    <label>Deposit Account</label>
    <length>255</length>
    <referenceTo>Deposit_Account__x</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>