force-app/main/default/objects/Diary_Comment__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Diary comments</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>