force-app/main/default/objects/Diary_Comment__x/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Expiry date of comment</description>
    <externalDeveloperName>ExpiryDate</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>