force-app/main/default/objects/Diary_Comment__x/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Financial Account indirect lookup via external id</description>
    <externalDeveloperName>Financial Account</externalDeveloperName>
    <label>Financial Account</label>
    <length>255</length>
    <referenceTargetField>FinServ__FinancialAccount__c.Account_Key__c</referenceTargetField>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>IndirectLookup</type>
</CustomField>