force-app/main/default/objects/Diary_Comment__x/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Parent Loan account</description>
    <externalDeveloperName>LoanAccount</externalDeveloperName>
    <label>Loan Account</label>
    <length>255</length>
    <referenceTo>Loan_Account__x</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>