force-app/main/default/objects/Diary_Comment__x/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Date modified </description>
    <externalDeveloperName>ModifiedDate</externalDeveloperName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>