force-app/main/default/objects/Diary_Comment__x/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description> Operator </description>
    <externalDeveloperName>Operator</externalDeveloperName>
    <label>Placed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>