force-app/main/default/objects/Diary_Comment__x/fields/Other_Limits_and_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Limits_and_Liabilities__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Associated Id of OLL Account</description>
    <externalDeveloperName>OLLId</externalDeveloperName>
    <label>Other Limits and Liabilities</label>
    <length>18</length>
    <referenceTo>Other_Limits_and_Liabilities__x</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>