force-app/main/default/objects/Diary_Comment__x/fields/Permanent__c.field-meta.xml
<CustomField>
    <fullName>Permanent__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Permanent Comment Flag </description>
    <externalDeveloperName>Permanent</externalDeveloperName>
    <label>Permanent (Y/N)</label>
    <type>Checkbox</type>
</CustomField>