force-app/main/default/objects/Diary_Comment__x/fields/Portfolio_Of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Of_Loan__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Associated Id Of PTF</description>
    <externalDeveloperName>PTFId</externalDeveloperName>
    <label>Portfolio Of Loan</label>
    <length>18</length>
    <referenceTo>Portfolio_Of_Loan__x</referenceTo>
    <relationshipLabel>Diary Comments</relationshipLabel>
    <relationshipName>Diary_Comments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>