force-app/main/default/objects/Diary_Comment__x/fields/Prompt_Date__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Prompt Date </description>
    <externalDeveloperName>PromptDate</externalDeveloperName>
    <label>Prompt Date</label>
    <type>DateTime</type>
</CustomField>