force-app/main/default/objects/Diary_Comment__x/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field reflects the CAP unique identifier which is a 4-digit sequency number in CAP</description>
    <label>Sequence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>