force-app/main/default/objects/Diary_Comment__x/fields/Work_Queue__c.field-meta.xml
<CustomField>
    <fullName>Work_Queue__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description> Work Queue </description>
    <externalDeveloperName>WorkQueue</externalDeveloperName>
    <label>Work Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>